--- a/References/side projects/css/style.css
+++ b/References/side projects/css/style.css
@@ -16,12 +16,13 @@
     width:100%;
 }  
   .wrapper{
-      width:80%;
-
+      width:100%;
       height:75%;
   }
   .hamburger{
     float:right;
+    /*padding-right: 45px;*/
+    justify-content: center;
   }
   .wrapper-content h1{
     position: absolute;
@@ -110,41 +111,60 @@
     transition: 500ms;
 }
 
-.whitespace{
-    width:100%;
-    height:6em;
-}
-.greenspace{
-    width:100%;
-    height:6em;
-    background-color:#5D8D68;
-}
 
-/*nieuwsbriefsection*/
-.nieuwsbriefsection{
-    background-color:#5D8D68;
-    justify-content: center;
-}.nieuwsbriefsection h2{
-    font-size:80px;
-    text-align:center;
-    padding:50px;
-}.nieuwsbriefsection p{
-    font-size:30px;
-    text-align:center;
-}
+/*menu overlay*/
+/* Import links */
+@import url("https://use.typekit.net/ifi0aam.css");
 
-/*inputstyling nieuwsbrief section*/
-.nieuwsbriefsection form{
-    display: flex;
-    justify-content: center;
-}
-.nieuwsbriefsection input{
-    border:none;
-    -webkit-appearance: none;
-    -ms-appearance:none;
-    -moz-appearance: none;
-    appearance: none;
-    background-color: #F2F2F2;
-    padding: 12px;
-}
+/* HamburgerMenu + Overlay */
+.overlay {
+    height: 0%;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.884);
+    background-color: rgb(0, 0, 0);
+    overflow-y: hidden;
+    transition: 0.5s;
+  }
 
+  .overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+  }
+
+  .overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #d1d1d1;
+    display: block;
+    transition: 0.3s;
+  }
+
+  .overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+  }
+
+  .overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+    color:white;
+  }
+
+  @media screen and (max-height: 450px) {
+    .overlay {overflow-y: auto;}
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+    }
+  }
