--- a/css/landingspage.css
+++ b/css/landingspage.css
@@ -9,20 +9,13 @@
     font-style: normal;
     scroll-behavior: smooth;
 }
-.navigationbar{
-    position:absolute;
-    background-color: #F2F2F2;
-    height:auto;
-    width:100%;
-}  
-  .wrapper{
-      width:80%;
 
-      height:75%;
+  .wrapper img{
+      width:100%;
+      height:60%;
   }
-  .hamburger{
-    float:right;
-  }
+
+
   .wrapper-content h1{
     position: absolute;
     top: 50%;
@@ -118,6 +111,51 @@
     width:100%;
     height:6em;
     background-color:#5D8D68;
+}
+/* About me Section */
+.aboutme{
+    padding:5%;
+}
+.aboutme h2{
+    text-align:center;
+    font-size: 70px;
+    padding:2.5%
+}
+.aboutmeInhoud{
+    display:grid;
+    grid-template: auto auto;
+    grid-gap: 15%;
+}
+.aboutmeText{
+    grid-row:1;
+    grid-column:1;
+    text-align:center;
+    font-size: 20px;
+}
+.aboutmeImage{
+    grid-row:1;
+    grid-column:2;
+}
+.aboutmeImage img{
+    width:75%;
+    height:auto;
+    border-radius: 15%;
+}.aboutmeButton{
+    color:rgb(255, 255, 255);
+    font-size: 32px;
+    width:7em;
+    height:1.5em;
+    text-align: center;
+    padding:5px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-decoration: none;
+    border-radius: 1000px;
+    background-color:#daa520d5;
+}.aboutmeButton:hover{
+    background-color: #F2F2F2;
+    color:black;
+    box-shadow:0 6px 6px hsl(0deg 0% 0% / 0.3);
+    transition: 500ms;
 }
 
 /*nieuwsbriefsection*/
