--- a/css/footer.css
+++ b/css/footer.css
@@ -58,3 +58,69 @@
 .footersubmitButton{
     background-color:#daa520d5;
 }
+
+
+@media (max-width:415px){
+    *{
+        margin:0;
+        padding:0; 
+     }footer{
+         background-color:#F2F2F2;
+         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+     }
+     /*footer grid*/
+     .footerGrid{
+         display:grid;
+         grid-template: auto auto auto;
+     }
+     .footerGrid iframe{
+        width:40%;
+     }
+     
+     /*grid instellingen*/
+     .footerGridOne{
+         grid-row:1;
+         grid-column: 1;
+     }
+     .footerGridTwo{
+         grid-row:2;
+         grid-column: 1;
+     }.footerGridThree{
+         grid-row:3;
+         grid-column: 1;  
+     }
+     
+     /*grid section 2*/
+     .footerGridTwo h3{
+         font-size:3.5rem;
+         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+     }.footerGridTwo a{
+         padding-bottom:15px;
+         font-size:30px;
+         text-align:center;
+         text-decoration: none;
+         color:black;
+         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+     }
+     
+     /*social icons*/
+     .socialIcons{
+         justify-content: space-between;
+     }
+     .facebookIcn, .instagramIcn{
+         width:3em;
+         height:auto;
+         padding:15px;
+     }
+     .emailIcn, .phoneIcn{
+         width:3em;
+         height:auto;
+         padding:15px;   
+     }
+     .footerGridOne p{
+         text-align:center;
+     }
+     .footersubmitButton{
+         background-color:#daa520d5;
+     }
+  }
