--- a/css/menuoverlay.css
+++ b/css/menuoverlay.css
@@ -30,6 +30,7 @@
     color: #d1d1d1;
     display: block;
     transition: 0.3s;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
   .overlay a:hover, .overlay a:focus {
@@ -45,12 +46,45 @@
   }
 
   @media screen and (max-height: 450px) {
-    .overlay {overflow-y: auto;}
-    .overlay a {font-size: 20px}
-    .overlay .closebtn {
-    font-size: 40px;
-    top: 15px;
-    right: 35px;
+    .overlay {
+      height: 0%;
+      width:25%;
+      position: fixed;
+      z-index: 100;
+      background-color: rgba(0, 0, 0, 0.884);
+      background-color: rgb(0, 0, 0);
+      overflow-y: hidden;
+      transition: 0.5s;
     }
+  
+    .overlay-content {
+      position: relative;
+      top: 25%;
+      width: 25%;
+      text-align: center;
+      margin-top: 30px;
+    }
+  
+    .overlay a {
+      padding: 8px;
+      text-decoration: none;
+      font-size: 36px;
+      color: #d1d1d1;
+      display: block;
+      transition: 0.3s;
+    }
+  
+    .overlay a:hover, .overlay a:focus {
+      color: #f1f1f1;
+    }
+  
+    .overlay .closebtn {
+      position: absolute;
+      top: 20px;
+      right: 45px;
+      font-size: 60px;
+      color:white;
+    }
+   
   }
   
